0023591: IGES Boundary Entity containing Composite Curve fails to translate